Update Swagger doc.
