# backend/routes/socialmedia.js
@@ -4,18 +4,18 @@ const router = express.Router();
 const {getAllSocialMediaLinks,getSocialMediaLinkById,createSocialMediaLink,updateSocialMediaLink,deleteSocialMediaLink} = require("../controllers/smController");
 
 // GET all social media links
-router.get("/socialmedia", getAllSocialMediaLinks);
+router.route("/socialmedia").get(getAllSocialMediaLinks);
 
 // GET a single social media link by ID
-router.get("/socialmedia/:id", getSocialMediaLinkById);
+router.route("/socialmedia/:id").get(getSocialMediaLinkById);
 
 // POST a new social media link
-router.post("/socialmedia", createSocialMediaLink);
+router.route("/socialmedia").post(createSocialMediaLink);
 
 // PUT (update) an existing social media link
-router.put("/socialmedia/:id", updateSocialMediaLink);
+router.route("/socialmedia/:id").put(updateSocialMediaLink);
 
 // DELETE a social media link
-router.delete("/socialmedia/:id", deleteSocialMediaLink);
+router.route("/socialmedia/:id").delete(deleteSocialMediaLink);
 
 module.exports = router;
